# MerkleKV

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  Extend#16.md  LICENSE  PHASE4_COMPLIANCE_MATRIX.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_REPORT.md  SECURITY.md  config.toml  cross_client_test.py  docker-compose.yml  final_validation.py  github_actions_summary.md  node1.toml  node2.toml  quickstart.toml  test_protocol.rs
.github/workflows/: clients-ci.yml  docker-publish.yml  integration-tests.yml
benches/: scan_bench.rs
clients/: IMPLEMENTATION_SUMMARY.md  README.md
clients/cpp/: CMakeLists.txt  README.md
clients/cpp/cmake/: merklekv-cpp-config.cmake.in
clients/cpp/examples/: CMakeLists.txt  basic_example.cpp
clients/cpp/include/merklekv/: client.hpp  exceptions.hpp  merklekv.hpp
clients/cpp/tests/: CMakeLists.txt  integration_tests.cpp  unit_tests.cpp
clients/dotnet/: README.md
clients/dotnet/examples/: BasicExample.cs  Examples.csproj
clients/dotnet/src/: Exceptions.cs  MerkleKV.Client.csproj  MerkleKvClient.cs
clients/dotnet/tests/: IntegrationTests.cs  MerkleKV.Client.Tests.csproj  UnitTests.cs
clients/elixir/examples/: basic.exs
clients/elixir/lib/: application.ex  exception.ex  merklekv_client.ex
clients/go/: README.md  benchmark.go  client.go  client_integration_test.go  client_test.go  doc.go  errors.go  go.mod  go.sum  integration_test.go
clients/go/examples/basic/: main.go
clients/java/: README.md  pom.xml
clients/java/examples/: AsyncExample.java  SyncExample.java
clients/java/src/main/java/io/merklekv/client/: AsyncMerkleKVClient.java  Benchmark.java  ConnectionException.java  KeyNotFoundException.java  MerkleKVClient.java  MerkleKVException.java  ProtocolException.java  TimeoutException.java
clients/java/src/test/java/io/merklekv/client/: AsyncMerkleKVClientTest.java  MerkleKVClientTest.java
clients/kotlin/examples/: BasicExample.kt
clients/kotlin/src/main/kotlin/io/merklekv/client/: MerkleKVClient.kt  MerkleKVException.kt
clients/kotlin/src/test/kotlin/io/merklekv/client/: MerkleKVClientTest.kt
clients/nodejs/: README.md  benchmark.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
clients/nodejs/examples/: basic.js
clients/nodejs/src/: client.ts  errors.ts  index.ts
clients/nodejs/tests/: client.test.ts  extended.test.ts  setup.ts
clients/php/: .phpunit.result.cache  Makefile  README.md  composer.json  phpunit.xml
clients/php/examples/: basic.php  performance.php
clients/php/src/: Client.php  Exceptions.php
clients/php/tests/: ClientTest.php  IntegrationTest.php
clients/python/: README.md  pyproject.toml
clients/python/examples/: basic.py
clients/python/merklekv/: __init__.py  async_client.py  client.py
clients/python/tests/: test_client.py  test_extended.py  test_integration.py
clients/ruby/: .rspec_status  README.md  merklekv.gemspec
clients/ruby/examples/: basic_example.rb
clients/ruby/lib/: merklekv.rb
clients/ruby/lib/merklekv/: client.rb  errors.rb
clients/ruby/spec/: client_spec.rb  integration_spec.rb  spec_helper.rb
clients/rust/: Cargo.toml  README.md
clients/rust/examples/: async_client.rs  sync_client.rs
clients/rust/src/: async_client.rs  client.rs  error.rs  error_clean.rs  lib.rs  lib_clean.rs
clients/rust/tests/: integration_tests.rs
clients/scala/examples/: BasicExample.scala
clients/scala/src/main/scala/io/merklekv/client/: MerkleKVClient.scala  MerkleKVException.scala
clients/scala/src/test/scala/io/merklekv/client/: MerkleKVClientSpec.scala  MerkleKVClientTest.scala
data/: db  snap.00000000000000DD  snap.0000000000137809
src/: change_event.rs  config.rs  lib.rs  main.rs  protocol.rs  replication.rs  server.rs  sync.rs
src/store/: kv_engine.rs  kv_trait.rs  merkle.rs  mod.rs  rwlock_engine.rs  sled_engine.rs
test_data_persistence_node/: db  snap.00000000000000A6
tests/integration/: README.md  REPLICATION_SUMMARY.md  REPLICATION_TESTING.md  REPLICATION_TEST_RESULTS.md  REPLICATION_TEST_STABILITY_FINAL.md  conftest.py  demo_replication.py  pytest.ini  requirements.txt  run_replication_tests.py  run_tests.py  test_admin_command.py  test_basic_operations.py  test_benchmark.py  test_bulk_operations.py  test_bulk_ops_manual.py  test_concurrency.py  test_error_handling.py  test_mget_fix.py  test_minimal_fixes.py  test_numeric_operations.py  test_replication.py  test_replication_simple.py  test_report.txt  test_scan_tcp.py  test_server_fixes.py  test_simple_server.py  test_statistical_commands.py  test_storage_persistence.py  validate_test_coverage.py
