[package]
name = "merkle_kv"
version = "0.1.0"
edition = "2021"
authors = ["AI-Decenter"]
description = "A distributed key-value store with Merkle tree for efficient synchronization"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
serde_cbor = "0.11"
bincode = "1.3"
log = "0.4.20"
env_logger = "0.10.1"
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
config = "0.13.4"
rumqttc = "0.24.0"
sha2 = "0.10.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
once_cell = "1.19"
sled = "0.34"
hex = "0.4"

[dev-dependencies]
tempfile = "3.9.0"
mockall = "0.12.1"
rand = "0.8"
