[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "merklekv"
version = "1.0.0"
description = "Python client library for MerkleKV distributed key-value store"
authors = [
    {name = "MerkleKV Team", email = "hello@merklekv.io"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["database", "key-value", "distributed", "merkle-tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/AI-Decenter/MerkleKV"
Repository = "https://github.com/AI-Decenter/MerkleKV"
Issues = "https://github.com/AI-Decenter/MerkleKV/issues"
Documentation = "https://github.com/AI-Decenter/MerkleKV#readme"

[tool.hatch.build.targets.wheel]
packages = ["merklekv"]
