[package]
name = "merklekv-client"
version = "1.0.0"
edition = "2021"
authors = ["MerkleKV Team <team@merklekv.io>"]
description = "Official Rust client library for MerkleKV distributed key-value store"
documentation = "https://docs.rs/merklekv-client"
homepage = "https://github.com/your-org/merkle-kv"
repository = "https://github.com/your-org/merkle-kv"
readme = "README.md"
license = "MIT"
keywords = ["database", "key-value", "distributed", "merkle", "client"]
categories = ["database", "network-programming", "api-bindings"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
serde_json = "1.0"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"
env_logger = "0.10"

[[example]]
name = "sync_client"
path = "examples/sync_client.rs"

[[example]]
name = "async_client"
path = "examples/async_client.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "merklekv_client"
path = "src/lib.rs"
